unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Annual_Price__c.field-meta.xml
<CustomField>
    <fullName>Annual_Price__c</fullName>
    <formula>ROUND(ARR__c, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>