unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Associated_Entitlement_Oracle_Code__c.field-meta.xml
<CustomField>
    <fullName>Associated_Entitlement_Oracle_Code__c</fullName>
    <formula>IF(NOT(ISBLANK(SBQQ__Product__r.Associated_Entitlement_Oracle_Code__c)), SBQQ__Product__r.Associated_Entitlement_Oracle_Code__c,  IF(Product_Type__c = &quot;Overage Rate&quot;, SBQQ__RequiredBy__r.Oracle_Code__c, &quot;&quot;))</formula>
    <label>Associated Entitlement Oracle Code</label>
    <type>Text</type>
</CustomField>