unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Custom_Pricing_Type__c.field-meta.xml
<CustomField>
    <fullName>Custom_Pricing_Type__c</fullName>
    <formula>TEXT(SBQQ__Product__r.Custom_Pricing_Type__c)</formula>
    <label>Custom Pricing Type</label>
    <type>Text</type>
</CustomField>