unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Discount_Rate__c.field-meta.xml
<CustomField>
    <fullName>Discount_Rate__c</fullName>
    <formula>IF(AND(ISPICKVAL(SBQQ__Quote__r.SBQQ__Type__c, &quot;Amendment&quot;), SBQQ__Product__r.Custom_Amend__c), 0.0, SBQQ__TotalDiscountRate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>