unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Discount_Type__c.field-meta.xml
<CustomField>
    <fullName>Discount_Type__c</fullName>
    <formula>TEXT(SBQQ__Product__r.Discount_Type__c)</formula>
    <label>Discount Type</label>
    <type>Text</type>
</CustomField>