unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/EMRR__c.field-meta.xml
<CustomField>
    <fullName>EMRR__c</fullName>
    <label>EMRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>