unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Entitlement_Type__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Type__c</fullName>
    <formula>TEXT(SBQQ__Product__r.Entitlement_Type__c)</formula>
    <label>Entitlement Type</label>
    <type>Text</type>
</CustomField>