unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Hide_From_Legacy_Rate_Cards__c.field-meta.xml
<CustomField>
    <fullName>Hide_From_Legacy_Rate_Cards__c</fullName>
    <formula>SBQQ__ProductFamily__c !=&quot;Rate Cards&quot; ||
(NOT(ISBLANK(SBQQ__UpgradedSubscription__c)) &amp;&amp; SBQQ__EffectiveQuantity__c &lt;= 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hide From Legacy Rate Cards</label>
    <type>Checkbox</type>
</CustomField>