unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Increment_Pricing_Entitlement_Type__c.field-meta.xml
<CustomField>
    <fullName>Increment_Pricing_Entitlement_Type__c</fullName>
    <formula>TEXT(SBQQ__Product__r.Increment_Pricing_Entitlement_Type__c)</formula>
    <label>Increment Pricing Entitlement Type</label>
    <type>Text</type>
</CustomField>