unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Incremental_Pricing_Quantity_Field__c.field-meta.xml
<CustomField>
    <fullName>Incremental_Pricing_Quantity_Field__c</fullName>
    <formula>TEXT(SBQQ__Product__r.Incremental_Pricing_Quantity_Field__c)</formula>
    <label>Incremental Pricing Quantity Field</label>
    <type>Text</type>
</CustomField>