unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Initial_Term_Amount__c.field-meta.xml
<CustomField>
    <fullName>Initial_Term_Amount__c</fullName>
    <formula>If(Paperwork_Product_Type__c &lt;&gt; &#39;One-Time&#39;, 
    IF(
        SBQQ__Product__r.No_Proration__c, 
        ROUND(SBQQ__NetTotal__c, 2) / FLOOR(SBQQ__Quote__r.SBQQ__SubscriptionTerm__c / SBQQ__Quote__r.Initial_Term_Length__c), 
        IF(
            SBQQ__Quote__r.SBQQ__SubscriptionTerm__c &lt; 12,
            ROUND((SBQQ__NetTotal__c / SBQQ__Quote__r.SBQQ__SubscriptionTerm__c) * (SBQQ__Quote__r.Initial_Term_Length__c), 2),
            ROUND((SBQQ__NetTotal__c / SBQQ__Quote__r.SBQQ__SubscriptionTerm__c) * (SBQQ__Quote__r.Initial_Term_Length__c - MOD(SBQQ__Quote__r.Initial_Term_Length__c, 12)), 2)
        )
    ), 
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Term Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>