unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Initial_Term_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Initial_Term_Quantity__c</fullName>
    <formula>IF(ISPICKVAL(SBQQ__Quote__r.SBQQ__Type__c, &quot;Amendment&quot;), SBQQ__EffectiveQuantity__c, IF(SBQQ__Quote__r.Contract_Type__c == &quot;Ramp Contract&quot;, SBQQ__EffectiveQuantity__c, IF(SBQQ__EffectiveQuantity__c &gt; 1, ((SBQQ__EffectiveQuantity__c * SBQQ__ProrateMultiplier__c) / SBQQ__Quote__r.SBQQ__SubscriptionTerm__c) * SBQQ__Quote__r.Initial_Term_Length__c, 1)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Term Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>