unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Is_Legacy_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_Legacy_Product__c</fullName>
    <formula>SBQQ__Product__r.Legacy_Product__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Legacy Product</label>
    <type>Checkbox</type>
</CustomField>