unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Oracle_Code__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Code__c</fullName>
    <formula>SBQQ__Product__r.Oracle_Code__c</formula>
    <label>Oracle Code</label>
    <type>Text</type>
</CustomField>