unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Overage_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Overage_Display_Name__c</fullName>
    <formula>SBQQ__ProductName__c &amp; &quot; (&quot; &amp; Overage_Unit_of_Measure__c &amp; &quot;)&quot;</formula>
    <label>Overage Display Name</label>
    <type>Text</type>
</CustomField>