unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Overage_Rate__c.field-meta.xml
<CustomField>
    <fullName>Overage_Rate__c</fullName>
    <label>Overage Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>