unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Overage_Rate_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Overage_Rate_Quantity__c</fullName>
    <label>Overage Rate Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>