unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Overage_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Overage_Unit_of_Measure__c</fullName>
    <formula>SBQQ__Product__r.Overage_Unit_of_Measure__c</formula>
    <label>Overage Unit of Measure</label>
    <type>Text</type>
</CustomField>