unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Override_Overage_Rate__c.field-meta.xml
<CustomField>
    <fullName>Override_Overage_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked this quote line will no longer automatically calculate an overage rate. It will continue to calculate the overage rate quantity.</inlineHelpText>
    <label>Override Overage Rate</label>
    <type>Checkbox</type>
</CustomField>