unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Paperwork_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Paperwork_Product_Type__c</fullName>
    <formula>IF(Product_Type__c == &quot;Overage Rate&quot; || (SBQQ__ProductFamily__c == &quot;Rate Cards&quot; &amp;&amp; NOT(SBQQ__Bundle__c)), &quot;Overage Rate&quot;, IF(TEXT(SBQQ__SubscriptionType__c) == &quot;Renewable&quot;, &quot;Renewable&quot;, &quot;One-Time&quot; ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paperwork Product Type</label>
    <type>Text</type>
</CustomField>