unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Previous_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Previous_List_Price__c</fullName>
    <formula>SBQQ__UpgradedSubscription__r.SBQQ__ListPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>