unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Previous_Number_of_Plays__c.field-meta.xml
<CustomField>
    <fullName>Previous_Number_of_Plays__c</fullName>
    <formula>SBQQ__UpgradedSubscription__r.Number_of_Plays__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous # of Plays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>