unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Product_is_Custom_Amend__c.field-meta.xml
<CustomField>
    <fullName>Product_is_Custom_Amend__c</fullName>
    <formula>SBQQ__Product__r.Custom_Amend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product is Custom Amend?</label>
    <type>Checkbox</type>
</CustomField>