unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Quantity_Prior_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Prior_Quantity__c</fullName>
    <formula>SBQQ__Quantity__c &lt;  SBQQ__PriorQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity &lt; Prior Quantity</label>
    <type>Checkbox</type>
</CustomField>