unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <label>Rate</label>
    <length>16</length>
    <type>Text</type>
</CustomField>