unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Renewal_Term_Amount__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Term_Amount__c</fullName>
    <label>Renewal Term Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>