unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Renewal_Term_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Term_Quantity__c</fullName>
    <formula>IF(SBQQ__EffectiveQuantity__c &gt; 1, ((SBQQ__EffectiveQuantity__c * SBQQ__ProrateMultiplier__c) / SBQQ__Quote__r.SBQQ__SubscriptionTerm__c) * (SBQQ__Quote__r.SBQQ__SubscriptionTerm__c - SBQQ__Quote__r.Initial_Term_Length__c), 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Term Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>