unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Rollup_Parent__c.field-meta.xml
<CustomField>
    <fullName>Rollup_Parent__c</fullName>
    <formula>SBQQ__Product__r.Rollup_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rollup Parent Pricing?</label>
    <type>Checkbox</type>
</CustomField>