unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Total_Overage_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Overage_Quantity__c</fullName>
    <label>Total Overage Rate Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>