unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Type_Summary__c.field-meta.xml
<CustomField>
    <fullName>Type_Summary__c</fullName>
    <formula>IF(OR(Product_Type__c == &quot;Entitlement&quot;, Product_Type__c == &quot;Overage Rate&quot;), Product_Type__c &amp; &quot; - &quot; &amp;  TEXT(SBQQ__Product__r.Entitlement_Type__c), Product_Type__c)</formula>
    <label>Type Summary</label>
    <type>Text</type>
</CustomField>