unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Usage_Product__c.field-meta.xml
<CustomField>
    <fullName>Usage_Product__c</fullName>
    <formula>SBQQ__Product__r.Usage_Product__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Usage Product</label>
    <type>Checkbox</type>
</CustomField>