unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Usage_Tier_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Usage_Tier_Frequency__c</fullName>
    <formula>IF(
OR(
SBQQ__ProductCode__c = &#39;310-26&#39;,
SBQQ__ProductCode__c = &#39;14-13&#39;,
SBQQ__ProductCode__c = &#39;300-93&#39;,
SBQQ__ProductCode__c = &#39;300-94&#39;,
SBQQ__ProductCode__c = &#39;ENT-MNGDCONTENT&#39;,
SBQQ__ProductCode__c = &#39;ENT-ADDL-MNGDCONTENT&#39;,
SBQQ__ProductCode__c = &#39;ENT-ADDL-SUBSCRIBER&#39;,
SBQQ__ProductCode__c = &#39;ENT-ADDL-VIEWER&#39;
),
&#39;Month&#39;,
&#39;Years&#39;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Usage Tier Frequency</label>
    <type>Text</type>
</CustomField>