unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Use_Entitlement_Type__c.field-meta.xml
<CustomField>
    <fullName>Use_Entitlement_Type__c</fullName>
    <formula>SBQQ__Product__r.Use_Entitlement_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Use Entitlement Type as Quantity</label>
    <type>Checkbox</type>
</CustomField>